# mlir-rv-compiler

./: CMakeLists.txt  README.md
IR/: CMakeLists.txt
IR/compiler/: CMakeLists.txt  main.cpp
IR/include/: CMakeLists.txt
IR/include/LLIR/: CMakeLists.txt  LLIROps.h  LLIROps.td  LLIRPasses.h  LLIRTypes.h  LLIRTypes.td
IR/include/RVIR/: CMakeLists.txt  RVIRDialect.h  RVIRDialect.td  RVIROps.h  RVIROps.td  RVIRPasses.h  RVIRPasses.td  RVIRTypes.h  RVIRTypes.td
IR/lib/: CMakeLists.txt
IR/lib/LLIR/: CMakeLists.txt  LLIRDialect.cpp  LLIROps.cpp  LLIRPasses.cpp  LLIRTypes.cpp
IR/lib/RVIR/: CMakeLists.txt  RVIRDialect.cpp  RVIROps.cpp  RVIRPasses.cpp  RVIRTypes.cpp
IR/rvir-opt/: CMakeLists.txt  rvir-opt.cpp
IR/test/: CMakeLists.txt  lit.cfg.py
IR/test/RVIR/: dummy.mlir  standalone-opt.mlir
IR/tools/: CMakeLists.txt
IR/tools/mlir-lsp/: CMakeLists.txt  mlir-lsp.cpp
IR/tools/rv-opt/: rv-opt.cpp
compiler/: CMakeLists.txt  main.cpp  printer.cpp
compiler/parser/: CMakeLists.txt
compiler/parser/include/parser/: parser.h
compiler/parser/lib/: parser.cpp
compiler/tokenizer/: CMakeLists.txt
compiler/tokenizer/include/token/: tokenizer.h  tokens.h
compiler/tokenizer/lib/: tokenizer.cpp  tokens.cpp
demo/: cpp_clang.sh  cpp_clang_builld.cpp
docs/: spl.md
include/: CMakeLists.txt
include/HLIR/: CMakeLists.txt  HLIRAttributes.h  HLIRAttributes.td  HLIRDialect.h  HLIRDialect.td  HLIREnums.h  HLIREnums.td  HLIROps.h  HLIROps.td  HLIRPasses.h  HLIRPasses.td  HLIRTypes.h  HLIRTypes.td
include/LLIR/: CMakeLists.txt  HLIRToLLIR.pdll  LLIRDialect.h  LLIRDialect.td  LLIROps.td  LLIRPasses.td
include/RVIR/: RVIRDialect.td  RVIROps.h  RVIROps.td  RVIRPasses.h  RVIRPasses.td  RVIRTypes.td
lib/HLIR/: CMakeLists.txt  HLIRAttributes.cpp  HLIRDialect.cpp  HLIREnums.cpp  HLIROps.cpp  HLIRTypes.cpp
lib/LLIR/: CMakeLists.txt
lib/LLIR/Passes/: CMakeLists.txt  HLIRToLLIRPass.cpp
lib/RVIR/: CMakeLists.txt  RVIRDialect.cpp  RVIROps.cpp  RVIRTypes.cpp
lib/RVIR/Passes/: CMakeLists.txt  RegAllocPass.cpp  ToRVPass.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/LLIR/: llir_simple_func.mlir  standalone-opt.mlir
test/Parse/: simple_func.spl  simple_func.tokens  simple_func_mlir  test.sh
test/RVIR/: rv_constant.mlir  rv_func_args.mlir  rv_simple_func.mlir  standalone-opt.mlir
test/RVIR/regAlloc/: regAlloc_add_constant.mlir  regAlloc_constant.mlir  regAlloc_simple_func.mlir
test/Token/: simple_func.tokens  test.sh
test/compiler/: simple_func.spl
tools/mlir-lsp/: CMakeLists.txt  mlir-lsp.cpp
tools/rv-opt/: CMakeLists.txt  rv-opt.cpp
